# bug-bounty-automation

./: .env.example  .gitignore  ALERT_GUIDE.md  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  GITHUB_UPLOAD_GUIDE.md  INSTALL.md  INSTALL_TOOLS.md  LICENSE  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE6_SESSION_SUMMARY.md  PHASE7_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RECON_GUIDE.md  SANITIZATION_SUMMARY.md  SCOPE_GUIDE.md  SECURITY.md  VULN_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_web.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml
docker/: Dockerfile
docs/: API_EXAMPLES.md
examples/: recon_demo.py
migrations/: env.py
migrations/versions/: 004_add_alerts.py  005_add_scope_history.py
scripts/: install_tools.ps1  install_tools.sh
src/: __init__.py  cli.py  cli_alert.py  cli_scan.py  cli_scope.py  cli_vuln.py  config.py  main.py
src/alerting/: __init__.py  discord.py  manager.py  slack.py
src/api/: __init__.py  auth.py  main.py  websocket.py
src/api/dependencies/: __init__.py  auth.py  database.py
src/api/middleware/: rate_limit.py
src/api/routes/: __init__.py  alerts.py  assets.py  auth.py  bulk.py  export.py  programs.py  scans.py  scope.py  stats.py  vulnerabilities.py  (+1 more)
src/cli/: __init__.py  admin.py
src/core/: __init__.py  diff_engine.py
src/db/: __init__.py  models.py  repositories.py  session.py
src/scanners/: __init__.py  base.py  dns_resolver.py  httpx_scanner.py  interactsh.py  naabu.py  nuclei.py  subfinder.py
src/scope/: __init__.py  base.py  bugcrowd.py  comparator.py  hackerone.py  validator.py
src/utils/: __init__.py  logging.py
src/web/: __init__.py  routes.py
src/workflows/: __init__.py  alerting.py  reconnaissance.py  scope_monitoring.py  vulnerability_scan.py
(+19 files in other folders)
